--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=\"development\" nodemon \"./server.ts\"",
-    "postinstall": "husky install",
+    "postinstall": "npm-run-all install:commitizen install:husky",
     "lint": "eslint \"./**/*.ts\" --config \"./.eslintrc.json\" --fix",
-    "install:commitizen": "npm install commitizen --location=global"
+    "install:commitizen": "npm install commitizen --location=global",
+    "install:husky": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "nodemon": "^2.0.20",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
