--- a/package.json
+++ b/package.json
@@ -37,17 +37,20 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@types/apicache": "^1.6.1",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
+    "apicache": "^1.6.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "mongoose": "^6.6.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "redis": "^4.3.1"
   },
   "lint-staged": {
     "**/*.{json,html}": [
