--- a/package.json
+++ b/package.json
@@ -38,18 +38,25 @@
   },
   "dependencies": {
     "@types/apicache": "^1.6.1",
+    "@types/base64-url": "^2.2.0",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
+    "@types/nodemailer": "^6.4.6",
     "apicache": "^1.6.3",
+    "base64-url": "^2.3.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "handlebars": "^4.7.7",
     "helmet": "^6.0.0",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
     "redis": "^4.3.1"
   },
   "lint-staged": {
